aks-k8s-deployment/manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: my-app
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
