aks-k8s-deployment/manifests/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: my-app
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
  tls:
    - hosts:
        - wordpress.example.com
      secretName: my-app-tls
